crates/vize_atelier_jsx/tests/snapshots/adversarial_snapshots__mode_aware_multi_component_module.snap
---
source: crates/vize_atelier_jsx/tests/adversarial_snapshots.rs
expression: output.module_code().as_str()
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"
export function DefaultMode(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("main", null, "default"))
}
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<section> </section>", true)

export function VaporOnly(_ctx) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(message)))
  return n0
}
export function VdomOnly(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("aside", null, _toDisplayString(count), 1 /* TEXT */))
}
