crates/vize_atelier_jsx/tests/snapshots/adversarial_snapshots__mode_aware_multi_component_summary_authored_native_10701.snap
---
source: crates/vize_atelier_jsx/tests/adversarial_snapshots.rs
expression: "compile_output_summary(MIXED_MODES, &output)"
---
CompileOutputSummary {
    diagnostics: [],
    components: [
        RenderComponentSummary {
            name: Some(
                "DefaultMode",
            ),
            mode: "Vdom",
            preamble: Some(
                "import { openBlock as _openBlock, createElementBlock as _createElementBlock } from \"vue\"\n",
            ),
            code: "export function render(_ctx, _cache) {\n  return (_openBlock(), _createElementBlock(\"main\", null, \"default\"))\n}",
            templates: [],
            scoped_style: None,
        },
        RenderComponentSummary {
            name: Some(
                "VaporOnly",
            ),
            mode: "Vapor",
            preamble: None,
            code: "import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';\nconst t0 = _template(\"<section> </section>\", true)\n\nexport function render(_ctx) {\n  const n0 = t0()\n  const x0 = _txt(n0)\n  _renderEffect(() => _setText(x0, _toDisplayString(message)))\n  return n0\n}\n",
            templates: [
                "<section> </section>",
            ],
            scoped_style: None,
        },
        RenderComponentSummary {
            name: Some(
                "VdomOnly",
            ),
            mode: "Vdom",
            preamble: Some(
                "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \"vue\"\n",
            ),
            code: "export function render(_ctx, _cache) {\n  return (_openBlock(), _createElementBlock(\"aside\", null, _toDisplayString(count), 1 /* TEXT */))\n}",
            templates: [],
            scoped_style: None,
        },
    ],
}
